Closed Bug 1174510 Opened 9 years ago Closed 9 years ago

fallback from unsupported (.ani) css cursor url() to a supported url() no longer working

Categories

(Core :: Layout, defect)

36 Branch
Other
All
defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla43
Tracking Status
firefox38 --- wontfix
firefox38.0.5 --- wontfix
firefox39 - wontfix
firefox40 + wontfix
firefox41 + wontfix
firefox42 + fixed
firefox43 + verified
firefox-esr31 --- unaffected
firefox-esr38 - wontfix

People

(Reporter: westor7, Assigned: dbaron)

References

()

Details

(Keywords: regression)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:38.0) Gecko/20100101 Firefox/38.0
Build ID: 20150605094246

Steps to reproduce:

I had add an code so i can change my website cursor but is not working under firefox, other browsers are ok.

Firefox: http://goo.gl/F2yz3y
IE: http://goo.gl/sZvyTt


Actual results:

Not working the website cursor


Expected results:

Sync the website cursor to be correct
Severity: normal → major
OS: Unspecified → Windows 10
Hardware: Unspecified → Other
[Tracking Requested - why for this release] : Regression since Firefox36

Steps to reproduce:

The css is,
body, a:hover {
    cursor: url("http://cur.cursors-4u.net/cursors/cur-8/cur736.ani"), url("http://cur.cursors-4u.net/cursors/cur-8/cur736.png"), progress !important;
}

Actual Results:
Error in parsing value for 'cursor'.  Declaration dropped. 914.css:40:29



Regression pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=f129b17f9067&tochange=f245578c4fa4

Regressed by: Bug 1084136
Blocks: 1084136
Status: UNCONFIRMED → NEW
Component: Untriaged → Layout
Ever confirmed: true
Flags: needinfo?(seth)
Keywords: regression
OS: Windows 10 → All
Product: Firefox → Core
Version: 38 Branch → 36 Branch
What all of these mean? its my fault or an firefox problem?
This is Firefox problem
Via local build
Last good: e0b56aa7e3b0
First bad: 179a94abc0b3

Regressed by: 	179a94abc0b3	Seth Fowler — Bug 1084136 (Part 10) - Materialize image status from image state when needed. r=tn
Summary: My Website cursor not working under Firefox → css cursor not working if using URL values for the cursor property
Tracking for 40+.  I don't think we can take a fix for this for 39 at this point.
Hmm, interesting. It's not at all obvious to me how that patch could affect *parsing*.
Attached file reduced
Back the offending bug out, please
[Tracking Requested - why for this release]:
Flags: needinfo?(seth) → needinfo?(jmuizelaar)
Flags: needinfo?(tnikkel)
Assignee: nobody → seth
(In reply to Alice0775 White from comment #8)
> Back the offending bug out, please

No. It's not even feasible to do so; that patch landed *8 months ago*.

This will get fixed, but it will take some time for me to get to it. Please respect the fact that I have to prioritize bugs that are more serious, affect more people, or have tighter deadlines for whatever reason.
Flags: needinfo?(tnikkel)
Flags: needinfo?(jmuizelaar)
Untracking for ESR38 release as this does not meet the ESR triage bar which primarily includes security related bug fixes and issues that have a significant end-user impact.
This has been deemed a lower priority (comment 10) and there is no fix. Marking 40 as wontfix.

Seth - This is still a regression. Do you have a sense of when you'll be able to prioritize this bug based on your current workload? Is 41 a realistic target or are we looking at a later release?
(In reply to Lawrence Mandel [:lmandel] (use needinfo) from comment #12)
> This has been deemed a lower priority (comment 10) and there is no fix.
> Marking 40 as wontfix.
> 
> Seth - This is still a regression. Do you have a sense of when you'll be
> able to prioritize this bug based on your current workload? Is 41 a
> realistic target or are we looking at a later release?

I think 41 is realistic, yeah.
Flags: needinfo?(seth)
[Tracking Requested - why for this release]:
Seth, do you still believe we may have a patch for FF41? We are almost a week away from building 41 RC and therefore the urgency to uplift if we have a fix in the works.
Flags: needinfo?(seth)
We are getting close to the end of the 41 release cycle. I see little choice here other than wontfix'ing for 41. Please let me know if there are any concerns.
Flags: needinfo?(tbbug)
Flags: needinfo?(sushant.bhatnagar)
Flags: needinfo?(phil)
Flags: needinfo?(pgulley)
Flags: needinfo?(peter)
Flags: needinfo?(mymdevelopers)
Flags: needinfo?(msi.developers)
Flags: needinfo?(martyv)
Flags: needinfo?(marty)
Flags: needinfo?(lohiadevelopers)
Flags: needinfo?(ipcdevelopers)
Flags: needinfo?(imam.developers)
Flags: needinfo?(helloandroiddevelopers)
Flags: needinfo?(developersw)
Flags: needinfo?(developers)
Flags: needinfo?(developers)
Flags: needinfo?(developers)
Flags: needinfo?(developers)
Flags: needinfo?(developers)
Flags: needinfo?(ceo)
Flags: needinfo?(catalin.nicolescu)
Flags: needinfo?(cao-cuong)
Flags: needinfo?(bugzilla.mozilla.org)
Flags: needinfo?(bpixeladmin)
Flags: needinfo?(bknight)
Flags: needinfo?(arabicdevelopers)
Flags: needinfo?(aky)
Summary: css cursor not working if using URL values for the cursor property → fallback from unsupported (.ani) css cursor url() to a supported url() no longer working
Bug 1174510 - Fix fallback from cursor formats that we don't support or that fail to decode to other cursor files.  r?seth

Although I didn't test this theory, I think it's fixing a regression
from patch 3 in bug 1084136 (changeset e7ecd25d7e7c), which stopped
clearing other flags when an error occurred.
Attachment #8657465 - Flags: review?(seth)
Assignee: seth → dbaron
Status: NEW → ASSIGNED
Comment on attachment 8657465 [details]
MozReview Request: Bug 1174510 - Fix fallback from cursor formats that we don't support or that fail to decode to other cursor files.  r?seth

Looks good. Thanks for taking this on, David.
Flags: needinfo?(seth)
Attachment #8657465 - Flags: review?(seth) → review+
https://hg.mozilla.org/mozilla-central/rev/72b0bd6c92fc
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
David, are you planning to request an uplift to 42 for this patch? Thanks
Flags: needinfo?(dbaron)
Comment on attachment 8657465 [details]
MozReview Request: Bug 1174510 - Fix fallback from cursor formats that we don't support or that fail to decode to other cursor files.  r?seth

Approval Request Comment
[Feature/regressing bug #]: Bug 1084136
[User impact if declined]: we never fall back to later url() values for the CSS cursor property when an earlier url loads successfully but is not supported (e.g., an .ani cursor)
[Describe test coverage new/current, TreeHerder]: doesn't have automated test coverage since it's hard to test right now
[Risks and why]: very low risk; it simply skips images that have an error to restore the old behavior
[String/UUID change made/needed]: no
Flags: needinfo?(dbaron)
Attachment #8657465 - Flags: approval-mozilla-aurora?
Comment on attachment 8657465 [details]
MozReview Request: Bug 1174510 - Fix fallback from cursor formats that we don't support or that fail to decode to other cursor files.  r?seth

Thanks. Let's take this long standing bug.
Attachment #8657465 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
QA Whiteboard: [good first verify]
I have reproduced the bug with Firefox Nightly 41.0a1(20150614030204) on Windows 7 64 bit.

Verified as fixed with Firefox Beta 43.0b7(20151126120800)

UA:
Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:41.0) Gecko/20100101 Firefox/41.0
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0
Whiteboard: [testday-20151127]
Reproduced this bug by following comment 0 with Firefox Nightly 41.0a1 (2015-06-14); 
(Build ID: 20150614030204) on Linux, 64 Bit

This Bug is now verified as fixed on Latest Firefox Beta 43.0b7

Build ID 	20151126120800
User Agent 	Mozilla/5.0 (X11; Linux x86_64; rv:43.0) Gecko/20100101 Firefox/43.0
QA Whiteboard: [good first verify] → [good first verify][testday-20151127]
Whiteboard: [testday-20151127]
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: