Bug 1174510 - Fix fallback from cursor formats that we don't support or that fail to decode to other cursor files.  r=seth

Although I didn't test this theory, I think it's fixing a regression
from patch 3 in bug 1084136 (changeset e7ecd25d7e7c), which stopped
clearing other flags when an error occurred.